# protospec

./: Cargo.toml  README.md  SPEC.md
examples/nbtview/: Cargo.toml  build.rs
examples/nbtview/spec/: nbt.pspec
examples/nbtview/src/: nbtview.rs
protospec/: Cargo.toml
protospec-build/: Cargo.toml
protospec-build/src/: asg.rs  ast.rs  decoder.rs  import.rs  lib.rs  parser.rs  semantifier.rs  tokenizer.rs
protospec-build/src/asg/: const_declaration.rs  ffi.rs  field.rs  function.rs  input.rs  mod.rs  program.rs  transform.rs
protospec-build/src/asg/expression/: array_index.rs  binary.rs  call.rs  cast.rs  const_float.rs  const_int.rs  enum_access.rs  int.rs  member.rs  mod.rs  ternary.rs  unary.rs
protospec-build/src/asg/types/: array.rs  bitfield.rs  container.rs  enum_.rs  foreign.rs  mod.rs  type_ref.rs
protospec-build/src/ast/: field.rs  mod.rs  program.rs  transform.rs
protospec-build/src/ast/declaration/: const_declaration.rs  ffi_declaration.rs  import_declaration.rs  mod.rs  type_declaration.rs
protospec-build/src/ast/expression/: array_index.rs  binary.rs  boolean.rs  call.rs  cast.rs  enum_access.rs  ident.rs  int.rs  member.rs  mod.rs  string.rs  ternary.rs  unary.rs
protospec-build/src/ast/types/: array.rs  bitfield.rs  container.rs  enum_.rs  mod.rs  scalar.rs  type_ref.rs
protospec-build/src/coder/: decode.rs  encode.rs  mod.rs
protospec-build/src/coder/decode/: array.rs  container.rs  field.rs  instruction.rs  mod.rs
protospec-build/src/coder/encode/: array.rs  auto.rs  container.rs  field.rs  instruction.rs  mod.rs  var_ref.rs
protospec-build/src/compiler/: decoder.rs  encoder.rs  encoder_sync.rs  expr.rs  mod.rs
protospec-build/src/ffi/: function.rs  mod.rs  transform.rs  type_.rs
protospec-build/src/parser/: error.rs  field.rs  mod.rs  program.rs  token_iter.rs  transform.rs
protospec-build/src/parser/declaration/: const_declaration.rs  ffi_declaration.rs  import_declaration.rs  mod.rs  type_declaration.rs
protospec-build/src/parser/expression/: add.rs  and.rs  array_index.rs  (+12 more)
protospec-build/src/prelude/: base64.rs  bits.rs  blen.rs  gzip.rs  len.rs  mod.rs  pad.rs  resolver.rs  sum.rs  utf16.rs  utf8.rs  var.rs
protospec-build/src/semantics/: error.rs  mod.rs  partial_type.rs  program.rs  resolve.rs  scope.rs
protospec-build/tests/: mod.rs
protospec-build/tests/compiler/: bitfield.rs  calculated.rs  container.rs  enum_.rs  expr.rs  foreign_type.rs  integration.rs  mod.rs  nbt.pspec  primitive.rs  tagged_enum.rs  test.pspec  transform.rs
protospec/src/: lib.rs
(+92 files in other folders)
