[package]
name = "protospec-build"
version = "0.1.1"
authors = ["Protryon <max.bruce12@gmail.com>"]
edition = "2018"
description = "One binary format language to rule them all, One binary format language to find them, One binary format language to bring them all and in the darkness bind them."
repository = "https://github.com/Protryon/protospec"
license = "MIT"
keywords = ["binary", "format", "language", "protospec", "compiler"]
categories = ["compilers", "development-tools", "parsing"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.6"
thiserror = "1.0"
uuid = { version = "0.8", features = ["v4"] }
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
