[package]
name = "nbtview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "nbtview"
path = "./src/nbtview.rs"

[dependencies]
protospec = { path = "../../protospec" }
clap = { version = "3.0", features = ["derive"] }
indenter = "0.3"
tokio = { version = "1", features = ["full"] }
async-recursion = "1.0"

[build-dependencies]
protospec-build = { path = "../../protospec-build" }

[features]
async = []
default = ["async"]

[workspace]